@@ -9,7 +9,7 @@
 		<version>0.26.0-SNAPSHOT</version>
 	</parent>
 	<properties>
-		<test.vmargs>-Xmx128m -XX:MaxPermSize=64m</test.vmargs>
+		<test.vmargs>-Xmx128m</test.vmargs>
 	</properties>
 	<artifactId>org.pdtextensions.semanticanalysis.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
